# rental_backend_AWS

./: .gitignore  PUSH_TO_GITHUB.md  db.sqlite3  requirements.txt
backend/: admin.py  (+6 more)
rental_backend/core/: .env.example  CORE_FOLDER_STRUCTURE.md  SUPERADMIN_COMMANDS.md  build_files.sh  current_db_structure.txt  pyproject.toml  requirements.txt  run_for_phone.bat  run_server.bat  vercel.json
rental_backend/core/backend/: admin.py  apps.py  authentication.py  fcm_utils.py  models.py  serializers.py  urls.py  utils.py  views.py
rental_backend/core/backend/management/: __init__.py
rental_backend/core/backend/migrations/: 0001_initial.py  0002_orderedproduct_rated_at_orderedproduct_review_text.py  0003_remove_orderedproduct_rated_at_and_more.py  0004_orderedproduct_rated_at_orderedproduct_review_text_and_more.py  0005_alter_orderedproduct_rental_duration_and_more.py  0006_category_gender.py  0007_homegendertileimage.py  0008_servicesubcategory_service_subcategory.py  0009_userdevice.py  0010_adminnotificationlog.py  0011_artistavailability.py  0012_homepageitem_subtitle.py  0013_home_banners.py  0014_add_product_position.py  0015_coupon_system.py  0016_coupon_usage_service_booking.py  0017_add_security_amount.py  0018_order_accepted_terms.py  0019_referralsettings_user_ban_reason_user_device_id_and_more.py  0020_service_vendor_and_service_owner.py  0021_alter_servicevendortoken_id.py  0022_trial_at_home_upsell.py  (+7 more)
rental_backend/core/core/: settings.py  urls.py  wsgi.py
rental_backend/core/scripts/: README_REFERRAL_E2E.md  run_referral_e2e.bat  run_referral_e2e.sh
(+14 files in other folders)
