[project]
name = "rental-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "asgiref==3.9.1",
    "attrs==25.4.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "Django==5.2.5",
    "dj-database-url==2.3.0",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.1",
    "firebase-admin>=6.0.0",
    "frozenlist==1.8.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "gunicorn==23.0.0",
    "httplib2==0.30.0",
    "idna==3.10",
    "multidict==6.7.0",
    "oauthlib==3.3.1",
    "pillow==11.3.0",
    "propcache==0.4.1",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "PyJWT==2.10.1",
    "pyparsing==3.2.3",
    "razorpay==1.4.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "schedule==1.2.2",
    "sqlparse==0.5.3",
    "twilio==9.8.3",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "whitenoise==6.9.0",
    "psycopg2-binary==2.9.10",
    "yarl==1.22.0",
]

[tool.vercel]
entrypoint = "core.wsgi:application"

[tool.vercel.scripts]
install = "uv pip install -r requirements.txt"
build = "python manage.py collectstatic --noinput"
